--- a/AZDORestApiExplorer.Build/Presentation/Views/DefinitionMain.xaml
+++ b/AZDORestApiExplorer.Build/Presentation/Views/DefinitionMain.xaml
@@ -16,6 +16,8 @@
     xmlns:vncmvvm="clr-namespace:VNC.Core.Mvvm;assembly=VNC.Core"
     xmlns:vncazdopv="clr-namespace:AZDORestApiExplorer.Presentation.Views;assembly=AZDORestApiExplorer.Presentation"
     
+    xmlns:core="clr-namespace:AZDORestApiExplorer.Core;assembly=AZDORestApiExplorer.Core"    
+    
     xmlns:local="clr-namespace:AZDORestApiExplorer.Build.Presentation.Views"
 
     xmlns:views="clr-namespace:AZDORestApiExplorer.Build.Presentation.Views"
@@ -34,43 +36,83 @@
 
     </UserControl.Resources>
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
+    <dxlc:LayoutControl Orientation="Vertical">
 
-        <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0"  
-                                    Count="{Binding Results.Count, Mode=TwoWay}"/>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="2*" />
+            </Grid.RowDefinitions>
 
-        <dxg:GridControl x:Name="grdResults" Grid.Row="1"
-                    ItemsSource="{Binding Results.ResultItems}"
-                    SelectedItem="{Binding Results.SelectedItem}"
-                    FontSize="12"
-                    ScrollViewer.CanContentScroll="True"
-                    ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                    ScrollViewer.VerticalScrollBarVisibility="Auto">
-            
-            <dxg:GridColumn FieldName="project.name" />
-            <dxg:GridColumn FieldName="id" />
-            <dxg:GridColumn FieldName="name" />
-            <dxg:GridColumn FieldName="authoredBy.displayName" Header="Authored By" />
-            <dxg:GridColumn FieldName="quality" />
-            <dxg:GridColumn FieldName="path" />
-            <dxg:GridColumn FieldName="type" />
-            <dxg:GridColumn FieldName="queue.name" />
-            <dxg:GridColumn FieldName="queue.pool.name" />            
-            <dxg:GridColumn FieldName="queueStatus" />
+            <dxlc:LayoutGroup  Grid.Row="0" Header="Definitions" >
 
-        </dxg:GridControl>
+                <Grid>
 
-                <dxlc:LayoutGroup Grid.Row="2" Orientation="Vertical" ItemLabelsAlignment="Local" View="GroupBox" Header="Selected Item Details" >
-            <dxlc:LayoutItem Label="Url" >
-                <dxe:TextEdit  Text="{Binding Results.SelectedItem.url}" />
-            </dxlc:LayoutItem>
-        </dxlc:LayoutGroup>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
 
-    </Grid>
+                    <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0"  
+                                                Count="{Binding Results.Count, Mode=TwoWay}"/>
+
+                    <dxg:GridControl x:Name="grdResults" Grid.Row="1"
+                                ItemsSource="{Binding Results.ResultItems}"
+                                SelectedItem="{Binding Results.SelectedItem}"
+                                FontSize="12"
+                                ScrollViewer.CanContentScroll="True"
+                                ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                                ScrollViewer.VerticalScrollBarVisibility="Auto">
+
+                        <dxg:GridColumn FieldName="project.name" />
+                        <dxg:GridColumn FieldName="id" />
+                        <dxg:GridColumn FieldName="name" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="authoredBy.displayName" Header="Authored By" />
+                        <dxg:GridColumn FieldName="quality" />
+                        <dxg:GridColumn FieldName="path" />
+                        <dxg:GridColumn FieldName="type" />
+                        <dxg:GridColumn FieldName="queue.name" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="queue.pool.name" BestFitModeOnSourceChange="VisibleRows"/>
+                        <dxg:GridColumn FieldName="queueStatus" BestFitModeOnSourceChange="VisibleRows"/>
+
+                    </dxg:GridControl>
+
+                    <dxlc:LayoutGroup Grid.Row="2" Orientation="Vertical" ItemLabelsAlignment="Local" View="GroupBox" Header="Selected Item Details" >
+                        <dxlc:LayoutItem Label="Url" >
+                            <dxe:TextEdit  Text="{Binding Results.SelectedItem.url}" />
+                        </dxlc:LayoutItem>
+                    </dxlc:LayoutGroup>
+
+                </Grid>
+
+            </dxlc:LayoutGroup>
+
+            <!--
+                This shows the items dependent on a Build Definition in separate tabs
+                The particular information is in a separate view.
+            -->
+
+            <dxlc:LayoutGroup Grid.Row="1" Orientation="Vertical"  View="Tabs" >
+
+                <dxlc:LayoutGroup.GroupBoxStyle>
+                    <Style TargetType="dxlc:GroupBox">
+                        <Setter Property="Background" Value="Transparent" />
+                        <Setter Property="BorderBrush" Value="Transparent" />
+                        <Setter Property="BorderThickness" Value="0" />
+                        <Setter Property="Padding" Value="0" />
+                        <Setter Property="TitleVisibility" Value="Collapsed" />
+                    </Style>
+                </dxlc:LayoutGroup.GroupBoxStyle>
+
+                <dxlc:LayoutGroup Header="Resources" >
+                    <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.ResourceMainRegion}" />
+                </dxlc:LayoutGroup>
+
+            </dxlc:LayoutGroup>
+
+        </Grid>
+
+    </dxlc:LayoutControl>
 
 </vncmvvm:ViewBase>
