--- a/AZDORestApiExplorer.Git/Presentation/Views/PullRequestMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/PullRequestMain.xaml
@@ -27,57 +27,55 @@
         
     </UserControl.Resources>
 
-    <dxlc:LayoutControl Orientation="Vertical">
+    <dxlc:LayoutControl Orientation="Vertical" >
 
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="3*" />
-            </Grid.RowDefinitions>
+        <dxlc:LayoutGroup Orientation="Vertical" >
 
-            <!--This shows the Pull Request Grid-->
-            
-            <dxlc:LayoutGroup Header="Pull Requests" Grid.Row="0">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="*" />
-                        <RowDefinition Height="Auto" />
-                    </Grid.RowDefinitions>
+            <dxlc:LayoutGroup View="GroupBox"
+                              Collapsed="PullRequests_LayoutGroup_ExpansionChanged" 
+                              Expanded="PullRequests_LayoutGroup_ExpansionChanged"
+                              IsCollapsible="True" IsCollapsed="False" >
+                   
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
 
-                    <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0" 
-                                            Count="{Binding Results.Count, Mode=TwoWay}"/>
+                        <vncazdopv:CommonGridHeader x:Name="commonGridHeader" Grid.Row="0" 
+                                                Count="{Binding Results.Count, Mode=TwoWay}"/>
 
-                    <dxg:GridControl x:Name="grdResults" Grid.Row="1"
-                        ItemsSource="{Binding Results.ResultItems}"
-                        SelectedItem="{Binding Results.SelectedItem}"
-                        FontSize="12"
-                        ScrollViewer.CanContentScroll="True"
-                        ScrollViewer.HorizontalScrollBarVisibility="Auto"
-                        ScrollViewer.VerticalScrollBarVisibility="Auto">
+                        <dxg:GridControl x:Name="grdResults" Grid.Row="1"
+                            ItemsSource="{Binding Results.ResultItems}"
+                            SelectedItem="{Binding Results.SelectedItem}"
+                            FontSize="12"
+                            ScrollViewer.CanContentScroll="True"
+                            ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                            ScrollViewer.VerticalScrollBarVisibility="Auto">
 
-                        <dxg:GridColumn FieldName="pullRequestId" BestFitModeOnSourceChange="VisibleRows"/>
-                        <dxg:GridColumn FieldName="title" BestFitModeOnSourceChange="VisibleRows"/>
-                        <dxg:GridColumn FieldName="description" BestFitModeOnSourceChange="VisibleRows"/>
-                        <dxg:GridColumn FieldName="codeReviewId" />
-                        <dxg:GridColumn FieldName="status" BestFitModeOnSourceChange="VisibleRows" />
-                        <dxg:GridColumn FieldName="createdBy.uniqueName" Header="Created By" BestFitModeOnSourceChange="VisibleRows"/>
-                        <dxg:GridColumn FieldName="creationDate" Header="Creation Date" >
-                            <dxg:GridColumn.EditSettings>
-                                <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
-                            </dxg:GridColumn.EditSettings>
-                        </dxg:GridColumn>
-                        <!--<dxg:GridColumn FieldName="url" />-->
+                            <dxg:GridColumn FieldName="pullRequestId" BestFitModeOnSourceChange="VisibleRows"/>
+                            <dxg:GridColumn FieldName="title" BestFitModeOnSourceChange="VisibleRows"/>
+                            <dxg:GridColumn FieldName="description" BestFitModeOnSourceChange="VisibleRows"/>
+                            <dxg:GridColumn FieldName="codeReviewId" />
+                            <dxg:GridColumn FieldName="status" BestFitModeOnSourceChange="VisibleRows" />
+                            <dxg:GridColumn FieldName="createdBy.uniqueName" Header="Created By" BestFitModeOnSourceChange="VisibleRows"/>
+                            <dxg:GridColumn FieldName="creationDate" Header="Creation Date" >
+                                <dxg:GridColumn.EditSettings>
+                                    <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
+                                </dxg:GridColumn.EditSettings>
+                            </dxg:GridColumn>
+                            <!--<dxg:GridColumn FieldName="url" />-->
                         
-                    </dxg:GridControl>
+                        </dxg:GridControl>
 
-                            <dxlc:LayoutGroup Grid.Row="2" Orientation="Vertical" ItemLabelsAlignment="Local" View="GroupBox" Header="Selected Item Details" >
-                        <dxlc:LayoutItem Label="Url" >
-                            <dxe:TextEdit  Text="{Binding Results.SelectedItem.url}" />
-                        </dxlc:LayoutItem>
-                    </dxlc:LayoutGroup>
+                        <dxlc:LayoutGroup Grid.Row="2" Orientation="Vertical" ItemLabelsAlignment="Local" View="GroupBox" Header="Selected Item Details" >
+                            <dxlc:LayoutItem Label="Url" >
+                                <dxe:TextEdit  Text="{Binding Results.SelectedItem.url}" />
+                            </dxlc:LayoutItem>
+                        </dxlc:LayoutGroup>
                     
-                </Grid>
+                    </Grid>
 
             </dxlc:LayoutGroup>
 
@@ -86,7 +84,7 @@
                 The particular information is in a separate view.
             -->
             
-            <dxlc:LayoutGroup Grid.Row="1" Orientation="Vertical"  View="Tabs" >
+            <dxlc:LayoutGroup Orientation="Vertical"  View="Tabs" >
 
                 <dxlc:LayoutGroup.GroupBoxStyle>
                     <Style TargetType="dxlc:GroupBox">
@@ -128,7 +126,7 @@
 
             </dxlc:LayoutGroup>
 
-        </Grid>
+        </dxlc:LayoutGroup>
 
     </dxlc:LayoutControl>
 
