--- a/AZDORestApiExplorer/Presentation/Views/Areas/Core/ProcessMain.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/Areas/Core/ProcessMain.xaml
@@ -54,7 +54,7 @@
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
             
-            <dxg:GridColumn FieldName="name" />
+            <dxg:GridColumn FieldName="name" SortIndex="0"/>
             <dxg:GridColumn FieldName="description" />
             <dxg:GridColumn FieldName="type" />
             <dxg:GridColumn FieldName="isDefault" />
