--- a/AZDORestApiExplorer/Presentation/Views/Areas/Core/ProjectMain.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/Areas/Core/ProjectMain.xaml
@@ -137,7 +137,7 @@
             ScrollViewer.HorizontalScrollBarVisibility="Auto"
             ScrollViewer.VerticalScrollBarVisibility="Auto">
             
-            <dxg:GridColumn FieldName="name" Width="150" />
+            <dxg:GridColumn FieldName="name" Width="150" SortIndex="0" />
             <!--<dxg:GridColumn FieldName="description" />-->
             <dxg:GridColumn FieldName="lastUpdateTime" />
             <dxg:GridColumn FieldName="state" />
