--- a/AZDORestApiExplorer/Presentation/Views/Areas/Core/TeamMain.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/Areas/Core/TeamMain.xaml
@@ -53,19 +53,23 @@
                 ScrollViewer.CanContentScroll="True"
                 ScrollViewer.HorizontalScrollBarVisibility="Auto"
                 ScrollViewer.VerticalScrollBarVisibility="Auto">
-            
-            <dxg:GridColumn FieldName="name" />
+
+            <dxg:GridColumn FieldName="projectName" SortIndex="0" />
+            <!--<dxg:GridColumn FieldName="projectId" />-->
+            <dxg:GridColumn FieldName="name" SortIndex="1"/>
             <dxg:GridColumn FieldName="description" />
-            <dxg:GridColumn FieldName="projectName" />
-            <dxg:GridColumn FieldName="projectId" />
             <dxg:GridColumn FieldName="id" />
-            <dxg:GridColumn FieldName="identityUrl" />
+            <!--<dxg:GridColumn FieldName="identityUrl" />-->
             <!--<dxg:GridColumn FieldName="url" />-->
         </dxg:GridControl>
 
         <dxlc:LayoutGroup Grid.Row="2" Orientation="Vertical" ItemLabelsAlignment="Local" View="GroupBox" Header="Selected Item Details" >
             <dxlc:LayoutItem Label="Url" >
                 <dxe:TextEdit  Text="{Binding Results.SelectedItem.url}" />
+            </dxlc:LayoutItem>
+
+            <dxlc:LayoutItem Label="Identity Url" >
+                <dxe:TextEdit  Text="{Binding Results.SelectedItem.identityUrl}" />
             </dxlc:LayoutItem>
         </dxlc:LayoutGroup>
 
