--- a/AZDORestApiExplorer/Presentation/Views/Areas/CoreArea.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/Areas/CoreArea.xaml
@@ -18,7 +18,6 @@
     xmlns:prism="http://prismlibrary.com/"
     prism:ViewModelLocator.AutoWireViewModel="False"
     
-    d:DesignWidth="300" d:DesignHeight="200" 
     d:DesignStyle="{StaticResource vncDesignStyleUC}" 
 >
     <!--<d:DesignerProperties.DesignStyle>
@@ -27,37 +26,44 @@
         </Style>
     </d:DesignerProperties.DesignStyle>-->
 
-        <dxlc:LayoutGroup Header="Core"
-            Orientation="Vertical"  View="Tabs">
+    <dxlc:LayoutGroup 
+        Orientation="Vertical">
+
+        <dxlc:LayoutGroup Header="Core" View="GroupBox" IsCollapsed="False" IsCollapsible="True">
+                  
+                <dxlc:LayoutGroup Header="Core"
+                    Orientation="Vertical"  View="Tabs">
             
-            <dxlc:LayoutGroup.GroupBoxStyle>
-                <Style TargetType="dxlc:GroupBox">
-                    <Setter Property="Background" Value="Transparent" />
-                    <Setter Property="BorderBrush" Value="Transparent" />
-                    <Setter Property="BorderThickness" Value="0" />
-                    <Setter Property="Padding" Value="0" />
-                    <Setter Property="TitleVisibility" Value="Collapsed" />
-                </Style>
-            </dxlc:LayoutGroup.GroupBoxStyle>
+                <dxlc:LayoutGroup.GroupBoxStyle>
+                    <Style TargetType="dxlc:GroupBox">
+                        <Setter Property="Background" Value="Transparent" />
+                        <Setter Property="BorderBrush" Value="Transparent" />
+                        <Setter Property="BorderThickness" Value="0" />
+                        <Setter Property="Padding" Value="0" />
+                        <Setter Property="TitleVisibility" Value="Collapsed" />
+                    </Style>
+                </dxlc:LayoutGroup.GroupBoxStyle>
 
-            <dxlc:LayoutGroup Header="Processes">
-                <Grid>
-                    <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.ProcessMainRegion}" />
-                </Grid>
-            </dxlc:LayoutGroup>
+                <dxlc:LayoutGroup Header="Processes">
+                        <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.ProcessMainRegion}" />
+                </dxlc:LayoutGroup>
 
-            <dxlc:LayoutGroup Header="Projects">
-                <Grid>
-                    <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.ProjectMainRegion}" />
-                </Grid>
-            </dxlc:LayoutGroup>
+                <dxlc:LayoutGroup Header="Projects">
+                        <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.ProjectMainRegion}" />
+                </dxlc:LayoutGroup>
 
-            <dxlc:LayoutGroup Header="Teams">
-                <Grid>
-                    <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.TeamMainRegion}" />
-                </Grid>
-            </dxlc:LayoutGroup>
+                <dxlc:LayoutGroup Header="Teams"> 
+                        <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.TeamMainRegion}" />
+                </dxlc:LayoutGroup>
             
+            </dxlc:LayoutGroup>
+
         </dxlc:LayoutGroup>
+
+        <dxlc:LayoutGroup Header="Work Item Detail" View="GroupBox" IsCollapsed="False" IsCollapsible="True">
+            <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.WorkItemMainRegion}" />
+        </dxlc:LayoutGroup>
+
+    </dxlc:LayoutGroup>
 
 </UserControl>
